kubernetes/worker-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker-app
  labels:
    name: worker-app
spec:
  containers:
  - name: worker-app-container
    # image: ahmedlsheriff/worker-app
    image: dockersamples/examplevotingapp_worker
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8081
