kubernetes/db.yml
# Pod
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    name: postgres-pod
    app: demo-voting-app
spec:
  containers:
  - name: postgres
    image: postgres:9.4
    resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
    # env:
    # - name: POSTGRES_USER
    #   value: "postgres"
    # - name:  POSTGRES_PASSWORD
    #   value: "postgres"
    # - name: POSTGRES_HOST_AUTH_METHOD
    #   value: trust
    ports:
     - containerPort: 5432
    volumeMounts:
    - name: db-storage
      mountPath: /var/lib/postgresql/data
  volumes:
  - name: db-storage
    persistentVolumeClaim:
      claimName: postgres-pv-claim
---
# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: db-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
     name: postgres-pod
---
