kubernetes/voting-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: vote-app
  labels:
    name: vote-app
    app: vote-app
spec:
  containers:
  - name: vote-app-container
    # image: ahmedlsheriff/worker-app
    image: dockersamples/examplevotingapp_vote
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
# Vote App Service
apiVersion: v1
kind: Service
metadata:
  name: vote-app-service
spec:
  selector:
    app: vote-app
  ports:
  - port: 80
---
# Redis Pod
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    name: redis-pod
    app: vote-app
spec:
  containers:
  - name: redis
    image: redis:latest
    resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
    ports:
     - containerPort: 6379
---
# Redis Service
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis-service
    app: vote-app
spec:
  ports:
  - port: 6379
    name: redis-something
    targetPort: 6379
  selector:
     name: redis-pod
     app: vote-app
