kubernetes/ingress.yml
# Ingress Service with ALB
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: abshafi.website
    external-dns.alpha.kubernetes.io/alias: "true"
spec:
  ingressClassName: alb
  rules:
    - host: result.abshafi.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-app-service 
                port:
                  number: 80 
    - host: vote.abshafi.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-app-service 
                port:
                  number: 80
